--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,7 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
+
+  
+
+ <link rel="icon" type="image/png" href="https://cdn-icons-png.flaticon.com/512/1151/11516506.png" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>techcruncher</title>
   </head>
